# oya

./: .bead-handoff-src-1ddg.json  .gitallowed  .gitignore  .gitleaksignore  AGENTS.md  AGENTS.md.bak  ARC_WRAPPING_REPORT.md  CLAUDE.md  CORRUPTION_TEST_SUMMARY.txt  Cargo.toml  DATABASE_LOCK_FIX.md  GATEKEEPER_REPORT_2026-02-07.md  HEALTH_INDICATORS_IMPLEMENTATION.md  LOOP_CONVERSIONS.md  MUT_REFACTORING_REPORT.md  OYA.md  PLAN.md  QA_FIX_SESSION_FINAL_REPORT.md  QA_REPORT_2026-02-07.md  QA_SUMMARY.md  RESTART_LATENCY_IMPLEMENTATION.md  RUNNING.md  SHA-256_MEMOIZATION_REPORT.md  STREAMCHUNK_OPTIMIZATION_REPORT.md  WORKSPACE_MIGRATION.md  ZERO_COPY_OPTIMIZATION_REPORT.md  ZJJ_BRUTAL_QA_FINAL_REPORT.md  ZJJ_CHAOS_INDEX.md  ZJJ_CHAOS_POC.md  ZJJ_CHAOS_QA_REPORT.md  ZJJ_CHAOS_SUMMARY.md  ZJJ_CORRUPTION_TEST_REPORT.md  ZJJ_QA_AGENT_17_SUMMARY.md  ZJJ_QA_FINAL_DELIVERABLE.md  ZJJ_QA_INDEX.md  ZJJ_QA_REPORT.md  ZJJ_QA_SUMMARY.md  binary.kdl  checkpoint_header_optimization_report.md  comments_only.kdl  (+55 more)
crates/centralized-docs/: Cargo.toml
crates/centralized-docs/src/: config.rs  document.rs  graph.rs  lib.rs  llms.rs  main.rs  main_insert.txt  scrape.rs  similarity.rs  types.rs  validate.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  result.rs
crates/events/: Cargo.toml  schema.surql
crates/events/src/: bus.rs  db.rs  durable_store.rs  error.rs  event.rs  lib.rs  projection.rs  replay.rs  store.rs  types.rs
crates/events/tests/: chaos_test.rs  event_serialization_tests.rs  replay_properties.rs  replay_test.rs  schema_test.rs
crates/factory/: Cargo.toml  moon.yml
crates/factory-core/: Cargo.toml
crates/factory-core/src/: audit.rs  worktree.rs
crates/factory/src/: ai_integration.rs  builder.rs  codegen.rs  domain.rs  error.rs  execution.rs  functional.rs  lib.rs  persistence.rs  pipeline.rs  quality_gates.rs  retry.rs  types.rs  worktree.rs
crates/intent/: Cargo.toml
crates/intent/src/: config.rs  error.rs  lib.rs
crates/juggernaut-cli/: Cargo.toml
crates/juggernaut-cli/src/: lib.rs  main.rs
crates/juggernaut-core/: Cargo.toml
crates/juggernaut-core/src/: error.rs  id.rs  lib.rs  result_ext.rs  state.rs
crates/juggernaut-docs/: Cargo.toml
crates/juggernaut-docs/src/: lib.rs
crates/juggernaut-events/: Cargo.toml
crates/juggernaut-events/src/: lib.rs
crates/juggernaut-intent/: Cargo.toml
crates/juggernaut-intent/src/: lib.rs
crates/juggernaut-opencode/: Cargo.toml
crates/juggernaut-opencode/src/: lib.rs
crates/juggernaut-reconciler/: Cargo.toml
crates/juggernaut-reconciler/src/: lib.rs
crates/juggernaut-tdd15/: Cargo.toml
crates/juggernaut-tdd15/src/: lib.rs
crates/juggernaut-workflow/: Cargo.toml
crates/juggernaut-workflow/src/: lib.rs
crates/juggernaut-zjj/: Cargo.toml
crates/juggernaut-zjj/src/: lib.rs
crates/merge-queue/: Cargo.toml
crates/merge-queue/src/: conflict.rs  conflict_test.rs  lib.rs  queue_test.rs  tests.rs
crates/opencode/: Cargo.toml
crates/opencode/src/: acp_schemas.rs  client.rs  config.rs  executor.rs  lib.rs  sse.rs  types.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/benches/: FLAMEGRAPH.md  restart_latency.rs
crates/orchestrator/examples/: graceful_shutdown.rs  ping_pong.rs
crates/orchestrator/src/: lib.rs  scheduler.rs  shutdown.rs  supervision.rs
crates/orchestrator/tests/: actor_behaviors.rs  agent_assignment_test.rs  agent_health_integration_test.rs  agent_health_test.rs  agent_pool_capacity_test.rs  bead_lifecycle_test.rs  behavioral_dag_test.rs  builder_test.rs  dag_behaviors.rs  dag_chaos_tests.rs  dag_e2e_tests.rs  dag_integration_tests.rs  dag_property_tests.rs  event_store_actor_test.rs  event_store_unit_tests.rs  memory_leak_test.rs  messaging_patterns_test.rs  one_for_one_red_queen.rs  one_for_one_strategy_test.rs  ping_pong_example.rs  restart_latency_test.rs  restart_latency_validation.rs  scheduler_behaviors.rs  scheduler_dag_integration.rs  scheduler_shutdown_bdd.rs  state_manager_actor_test.rs  supervisor_chaos_tests.rs  surreal_connection_chaos.rs  tier1_sequential_kill_chaos_test.rs  tier1_supervisor_chaos.rs  tier1_supervisors_test.rs  tier2_chaos_test.rs  tier2_chaos_tests.rs  tier2_random_kill_test.rs  worker_event_emission.rs  worker_event_tests.rs  workspace_execution_test.rs
crates/oya-bevy/: Cargo.toml  moon.yml
crates/oya-bevy/src/: main.rs
crates/oya-ipc/: Cargo.toml
crates/oya-ipc/benches/: transport_bench.rs
crates/oya-ipc/src/: error.rs  lib.rs  messages.rs  transport.rs
crates/oya-ipc/tests/: transport_error_tests.rs  transport_happy_path_tests.rs
crates/oya-shared/: BEAD_ARC_OPTIMIZATION_REPORT.md  Cargo.toml
crates/oya-shared/benches/: bead_performance.rs  stream_chunk_benchmark.rs
crates/oya-shared/src/: bead.rs  bead_test.rs  event.rs  graph.rs  lib.rs  pipeline.rs
crates/oya-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/oya-tauri/capabilities/: default.json
crates/oya-tauri/src/: error.rs  lib.rs  main.rs  streaming.rs
crates/oya-ui/: Cargo.toml  README.md  Trunk.toml  fix_tests.sh  index.html  moon.yml  oya.kll
crates/oya-ui/.cargo/: config.toml
crates/oya-ui/examples/: task_list_demo.rs
crates/oya-ui/src/: app.rs  components.rs  error.rs  layout.rs  lib.rs  main.rs  plugin.rs  render.rs  router.rs
crates/oya-ui/tests/: dag_edge_test.rs  hover_integration.rs  spring_force_test.rs
crates/oya-web/: Cargo.toml  README.md
crates/oya-web/src/: actors.rs  agent_repository.rs  agent_service.rs  circuit_breaker.rs  error.rs  error_handler.rs  health.rs  lib.rs  metrics.rs  middleware.rs  middleware_tests.rs  retry.rs  server.rs  validation.rs  workflow_graph.rs
crates/oya-zellij/: BEAD_DETAIL_HISTORY.md  Cargo.toml  FUNCTIONAL_TRANSFORMATION.md  README.md  RELEASE.md  libhealth_indicators.rlib  moon.yml
crates/pipeline/: Cargo.toml
crates/reconciler/: Cargo.toml
crates/workflow/: BENCHMARK_RESULTS.md  BENCHMARK_VALIDATION.md  Cargo.toml  HANDLER_VALIDATION_CACHE_IMPLEMENTATION_SUMMARY.md  HANDLER_VALIDATION_CACHE_REPORT.md  checkpoint_arc_optimization_report.md  test_fallback.rs
(+1430 files in other folders)
