[workspace]
 members = [
    "crates/core",
    "crates/pipeline",
    "crates/orchestrator",
    "crates/merge-queue",
    "crates/opencode",
    "crates/workflow",
    "crates/events",
    "crates/reconciler",
    "crates/oya-web",
    # Excluded: oya-ui is standalone workspace (Leptos macro needs panic = deny)
    # "crates/oya-ui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Lewis Prior <lewis@lewisandquark.com>"]
license = "MIT"
repository = "https://github.com/lprior-repo/oya"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "forbid"
expect_used = "deny"
panic = "forbid"
todo = "warn"
unimplemented = "forbid"
unreachable = "forbid"

[workspace.dependencies]
# Internal crates (must match actual package names in Cargo.toml)
oya-core = { path = "crates/core" }
oya-pipeline = { path = "crates/pipeline" }
oya-opencode = { path = "crates/opencode" }
oya-workflow = { path = "crates/workflow" }
oya-events = { path = "crates/events" }
oya-reconciler = { path = "crates/reconciler" }
oya-web = { path = "crates/oya-web" }
oya-ui = { path = "crates/oya-ui" }
orchestrator = { path = "crates/orchestrator" }
merge-queue = { path = "crates/merge-queue" }

# Async runtime (battle-tested)
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Storage (battle-tested)
surrealdb = { version = "2", features = ["kv-rocksdb"] }
surrealdb-core = "2"

# Caching (battle-tested)
moka = { version = "0.12", features = ["sync"] }

# Serialization (battle-tested)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
bincode = "1"

# Cryptography (battle-tested)
sha2 = "0.10"

# FP primitives (battle-tested)
im = "15.1"
itertools = "0.14"

# CLI (battle-tested)
clap = { version = "4", features = ["derive"] }

# IDs
ulid = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v5", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Regex
regex = "1"

# Glob pattern matching
glob = "0.3"

# Graph data structure (battle-tested)
petgraph = "0.6"

# Notify for file watching
notify = "7"

# HTTP and web scraping
reqwest = { version = "0.12", features = ["blocking", "json"] }
scraper = "0.20"
url = { version = "2", features = ["serde"] }

# Web framework (latest)
axum = { version = "0.8", features = ["macros", "tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "fs"] }
hyper = "1.8"
hyper-util = { version = "0.1", features = ["full"] }
http = "1.2"
http-body-util = "0.1"

# Functional utilities
tap = "1"

[package]
name = "oya"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OYA SDLC System - Storm goddess of transformation. 100x developer throughput with AI agent swarms."
keywords = ["sdlc", "tdd", "ai", "agents", "automation"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "oya"
path = "src/main.rs"

[dependencies]
oya-core = { workspace = true }
oya-pipeline = { workspace = true }
oya-opencode = { workspace = true }
oya-workflow = { workspace = true }
oya-events = { workspace = true }
oya-reconciler = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
