[package]
name = "centralized-docs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "OYA Centralized Documentation - Document transformation, chunking, and indexing"

[lints]
workspace = true

[dependencies]
oya-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
