[package]
name = "oya-events"
version = "0.1.0"
edition = "2021"
description = "Inter-bead coordination via event sourcing"
license = "MIT"

[dependencies]
# Workspace dependencies
oya-core = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["sync", "time"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bincode = "1.3"

# Time
chrono = { workspace = true, features = ["serde"] }

# IDs
ulid = { workspace = true, features = ["serde"] }

# Error handling
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

# Database
surrealdb = { workspace = true }
surrealdb-core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "forbid"
