[package]
name = "oya-intent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Intent/KIRK system for OYA"

[dependencies]
oya-core = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }
tap = { workspace = true }
url = { workspace = true }
directories = "6"

[lints]
workspace = true
