[package]
name = "juggernaut-cli"
description = "Unified CLI for Juggernaut SDLC Factory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "juggernaut"
path = "src/main.rs"

[dependencies]
juggernaut-core = { workspace = true }
juggernaut-workflow = { workspace = true }
juggernaut-events = { workspace = true }
juggernaut-reconciler = { workspace = true }
juggernaut-intent = { workspace = true }
juggernaut-tdd15 = { workspace = true }
juggernaut-zjj = { workspace = true }
juggernaut-docs = { workspace = true }
juggernaut-opencode = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[lints]
workspace = true
