[package]
name = "juggernaut-tdd15"
description = "TDD15 phase definitions and complexity routing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
juggernaut-core = { workspace = true }
juggernaut-workflow = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
