[package]
name = "juggernaut-zjj"
description = "Workspace isolation: 1 bead = 1 jj worktree + Zellij session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
juggernaut-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"

[lints]
workspace = true
