[package]
name = "oya-opencode"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenCode AI bridge for OYA - Execute AI coding tasks via opencode CLI"

[dependencies]
oya-core = { workspace = true }

# ID generation
ulid = "1"

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# HTTP client
reqwest = { workspace = true }
url = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

# Async traits
async-trait = "0.1"

# Streaming
tokio-stream = "0.1"
pin-project-lite = "0.2"

# CLI path detection
which = "7"

[lints]
workspace = true
