[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "OYA Orchestrator - Agent swarm coordination and task distribution"

[lints]
workspace = true

[dev-dependencies]
tracing-subscriber = "0.3"
tempfile = "3"

[dependencies]
oya-core = { workspace = true }
oya-events = { workspace = true }
oya-pipeline = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
petgraph = { workspace = true }

# Actor framework (Erlang-inspired, 100% Rust)
# Using native ractor supervision instead of ractor-supervisor due to version compatibility
ractor = "0.15"

# Persistence layer (SurrealDB)
surrealdb = { workspace = true }
chrono = { workspace = true }

# Serialization for state persistence
bincode = { workspace = true }

# Async utilities
async-trait = { workspace = true }
futures = "0.3"

# HTTP client for health checks
reqwest = { version = "0.12", features = ["json"] }

# Functional Rust (Holy Trinity)
im = { workspace = true }
tap = { workspace = true }
itertools = { workspace = true }

# UUID generation for message/timer IDs
uuid = { version = "1.0", features = ["v4"] }
