[package]
name = "oya-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "IPC transport layer for Zellij plugin communication"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = { version = "1" }
serde = { workspace = true, features = ["derive"] }

[[bench]]
name = "transport_bench"
harness = false
