[package]
name = "oya-shared"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Lewis Prior <lewis@lewisandquark.com>"]
license = "MIT"
repository = "https://github.com/lprior-repo/oya"
description = "Shared types for oya-ui and oya-tauri with high-performance serialization"

[dependencies]
# Serialization (standard + zero-copy)
serde = { version = "1", features = ["derive"] }
rkyv = { version = "0.8", features = ["bytecheck"] }

# Bytes for zero-copy streaming
bytes = "1.9"

# IDs
ulid = { version = "1", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[lints.rust]
unsafe_code = "forbid"

[lib]
bench = false

[[bench]]
name = "bead_performance"
harness = false

[lints.clippy]
unwrap_used = "forbid"
expect_used = "deny"
panic = "forbid"
todo = "warn"
unimplemented = "forbid"
unreachable = "forbid"
