[package]
name = "oya-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Leptos 0.7 CSR frontend for OYA graph visualization"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "Document",
    "HtmlCanvasElement",
    "TextMetrics",
    "Window",
] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
gloo-net = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
