[package]
name = "oya-ui"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Lewis Prior <lewis@lewisandquark.com>"]
license = "MIT"
repository = "https://github.com/lprior-repo/oya"
description = "Leptos 0.7 CSR frontend for OYA graph visualization"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "oya-ui"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "Document",
    "DomRect",
    "Element",
    "HtmlCanvasElement",
    "TextMetrics",
    "Window",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = "0.6"
gloo-timers = "0.3"
thiserror = "2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
tokio = { version = "1", features = ["macros", "rt"] }

# Standalone workspace to avoid Leptos macro conflicts
# See: https://github.com/leptos-rs/leptos/issues/xxx
# Leptos #[component] macro needs #[allow(clippy::panic)]
# which conflicts with workspace forbid(clippy::panic)
[workspace]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
expect_used = "deny"
panic = "deny"
todo = "warn"
unimplemented = "forbid"
unreachable = "forbid"
