[package]
name = "oya-zellij"
version = "0.1.0"
edition = "2021"
description = "Zellij plugin for OYA pipeline orchestration"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Zellij plugin API
zellij-tile = "0.43"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Functional programming
im = "15.1"
tap = "1.0"
itertools = "0.14"
strum = { version = "0.26", features = ["derive"] }

# Shared types from workspace
oya-shared = { path = "../oya-shared" }

[lints]
workspace = true
